[package]
name = "postgres-headers-rs"
version = "0.1.0"
authors = ["Joshua Lockerman <josh@timescale.com>"]
edition = "2018"

build = "build.rs"

[features]
default = []
parse_headers = ["bindgen", "pg-guard-function"]

[dependencies]

[dependencies.pg-guard-function]
optional = true
version = "*"
path = "../pg-guard-function"

[build-dependencies.bindgen]
optional = true
version = "0.54"
default-features = false
features = ["runtime"]
