[package]
name = "timescale-extension-utils"
version = "0.1.0"
authors = ["Joshua Lockerman <josh@timescale.com>"]
edition = "2018"

[dependencies]
postgres-headers-rs = {version = "*", path = "../postgres-headers-rs"}

[features]
default = []
parse_headers = ["postgres-headers-rs/parse_headers"]
pg12 = ["parse_headers"]
pg13 = ["parse_headers"]

